--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,35 @@
+<div id="demandeConge" style="display:flex; width:100%;">
+  <div style=" width:20%;position:fixed; top: 0px;background-color: darkorange;height: 100%">
+    <app-menu></app-menu>
+  </div>
+  <div style=" width:100%; padding-left: 20%">
+    <app-horizontal-menu style="position: fixed; width: 80%;z-index: 15;"></app-horizontal-menu>
+    <div style="display: flex;">
+      <div class="panel" style="margin: 3%; padding-top:5%; width:100%;">
+        <header class="panel-heading">
+          <div class="row">
+            <div class="col-lg-4"></div>
+            <div class="col-lg-4">
+              <div class="example example-buttons">
 
-<router-outlet></router-outlet>
+              </div>
+            </div>
+            <div class="col-lg-4"></div>
+          </div>
+        </header>
+        <div class="panel-body">
+          <div class="margin-bottom-15">
+          </div>
+          <div style="padding-top: 21px;">
+            <router-outlet></router-outlet>
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+
+</div>
+
