--- a/src/app/liste-avance-salaire/liste-avance-salaire.component.scss
+++ b/src/app/liste-avance-salaire/liste-avance-salaire.component.scss
@@ -18,6 +18,18 @@
   font-size: 13px !important;
 }
 
+.tr {
+  text-align: center !important;
+}
+
+.th {
+  text-align: center !important;
+}
+
+.td {
+  text-align: center !important;
+}
+
 
 
 .flag {
