--- a/src/app/list-conges/list-conges.component.html
+++ b/src/app/list-conges/list-conges.component.html
@@ -8,40 +8,47 @@
         <div class="p-d-flex p-ai-center p-jc-between" style="width: 60%">
         <span class="p-input-icon-left" style="width: 100%">
                     <i class="pi pi-search"></i>
-                    <input pInputText type="text" style="margin-left: 5%; width: 93%;"(input)="dt.filterGlobal($event.target.value, 'contains')" placeholder="Chercher un utilisateur par nom, prénom, matricule, email ou date de création" />
+                    <input pInputText class="searchInput, p-inputtext" type="text" style="margin-left: 5%; width: 93%;"(input)="dt.filterGlobal($event.target.value, 'contains')" placeholder="Chercher une demande de congés" />
                 </span>
         </div>
         <!--
-        <div style="width:8%; margin-left: 32%">
-          <button pButton pRipple label="New" icon="pi pi-plus" class="p-button-success p-mr-2" (click)="openNew()"></button>
+        <div style="width: 24%;
+    margin-left: 21%;">
+          <button pButton pRipple label="Nouvelle demande" icon="pi pi-plus" class="p-button-success p-mr-2" (click)="openNew()"></button>
         </div>
         -->
       </div>
 
     </ng-template>
     <ng-template pTemplate="header">
-      <tr>
-        <th pSortableColumn="employe">Employé</th>
-        <th pSortableColumn="demandeCongeType">Type </th>
+      <tr style="font-size: 13px !important;">
+
+        <th pSortableColumn="employe" style="text-align: center; width: 90px;">Employé</th>
+
+        <th pSortableColumn="demandeCongeType" style="text-align: center;">Type </th>
 <!--
         <th pSortableColumn="motif">Motif </th>
 -->
-        <th pSortableColumn="dateDeb" style="width: 150px">Date de début </th>
-        <th pSortableColumn="dateFin"  style="width: 150px">Date de fin </th>
-        <th pSortableColumn="nbrJrs"  style="width: 100px">Nombre des jours </th>
-        <th pSortableColumn="remplacant" style="width: 130px">Remplaçant</th>
-        <th pSortableColumn="tacheDele"style="width: 230px">Taches à faire</th>
-        <th pSortableColumn="dateDem"  style="width: 150px">Date de création</th>
-        <th pSortableColumn="status">Statut</th>
+        <th pSortableColumn="dateDeb" style="text-align: center;">Date de début </th>
+        <th pSortableColumn="dateFin"  style="text-align: center;">Date de fin </th>
+        <th pSortableColumn="nbrJrs"  style="text-align: center;">Nombre des jours </th>
+        <th pSortableColumn="remplacant" style="text-align: center; width: 120px">Remplaçant</th>
+        <th pSortableColumn="tacheDele" style="text-align: center; width:150px;">Taches à faire</th>
+        <th pSortableColumn="dateDem" style="text-align: center;">Date de création</th>
+        <th pSortableColumn="status" style="text-align: center;width:90px">Statut</th>
+
         <th style="width: 10rem"></th>
+
       </tr>
     </ng-template>
     <ng-template pTemplate="body" let-conge>
-      <tr class="p-selectable-row">
-        <td>
+      <tr class="p-selectable-row" style="font-size: 13px !important;">
+
+        <td style="text-align: center;">
           {{conge.employe}}
         </td>
-        <td>
+
+        <td style="text-align: center;">
           {{conge.demandeCongeType}}
         </td>
 <!--
@@ -49,37 +56,39 @@
           {{conge.motif}}
         </td>
 -->
-        <td>
+        <td style="text-align: center;">
           {{conge.dateDeb}}
         </td>
-        <td>
+        <td style="text-align: center;">
           {{conge.dateFin}}
         </td>
-        <td>
+        <td style="text-align: center;">
           {{conge.nbrJrs}}
         </td>
-        <td>
+        <td style="text-align: center;">
           {{conge.remplacant}}
         </td>
-        <td>
+        <td style="text-align: center;">
           {{conge.tacheDele}}
         </td>
-        <td>
+        <td style="text-align: center;">
           {{conge.dateDem}}
         </td>
 
-        <td>
+        <td style="text-align: center;">
           <span *ngIf="conge.status === 'VALIDATED'" class="customer-badge status-active">Validé</span>
           <span *ngIf="conge.status === 'REFUSED'" class="customer-badge status-blocked">Refusé</span>
           <span *ngIf="conge.status === 'IN_PROGRESS'" class="customer-badge status-progress">En cours</span>
         </td>
-        <td>
+
+        <td style="text-align: center;">
           <div style="display: flex;">
             <button pButton  [disabled]="conge.status !== 'IN_PROGRESS'" pRipple icon="pi pi-check" class="p-button-rounded p-button-success p-mr-2" style="margin-right: 7px;" (click)="1"></button>
             <button pButton  [disabled]="conge.status !== 'IN_PROGRESS'" pRipple icon="pi pi-times" class="p-button-rounded p-button-danger" (click)="1"></button>
           </div>
 
         </td>
+
       </tr>
     </ng-template>
     <ng-template pTemplate="emptymessage">
