--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -10,19 +10,21 @@
   <div class="list" >
     <div>
       <ul class="list-group list-group-flush" style="background-color: darkorange;">
+
         <li  class="list-group-item list-group-item-dark" style="border: 0px solid rgba(0, 0, 0, 0.125) !important; background-color: darkorange; margin-top: 35%;" >
           <i class="fas fa-users"></i>
           <a  class="links" title="Gestion des utilisateurs"  [routerLink]="['/','utilisateurs']" > Gestion des tilisateurs</a>
         </li>
 
-        <li class="list-group-item list-group-item-dark" style="border: 0px solid rgba(0, 0, 0, 0.125) !important; background-color: darkorange">
+
+        <li class="list-group-item list-group-item-dark" style="border: 0px solid rgba(0, 0, 0, 0.125) !important; background-color: darkorange;">
           <i class="fas fa-envelope"></i>
           <a  class="links" title="Demandes de congés" [routerLink]="['/','conges']" > Demandes de congés</a>
         </li>
 
         <li class="list-group-item list-group-item-dark" style="border: 0px solid rgba(0, 0, 0, 0.125) !important; background-color: darkorange">
           <i class="fas fa-hand-holding-usd"></i>
-          <a  class="links" title="Demandes des avances salaires" [routerLink]="['/','tableau-de-bord']" > Demandes des avances salaires</a>
+          <a  class="links" title="Demandes des avances salaires" [routerLink]="['/','avances-salaire']" > Demandes des avances salaires</a>
         </li>
 
         <li class="list-group-item list-group-item-dark" style="border: 0px solid rgba(0, 0, 0, 0.125) !important; background-color: darkorange">
