--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -13,7 +13,7 @@
 
         <li  class="list-group-item list-group-item-dark" style="border: 0px solid rgba(0, 0, 0, 0.125) !important; background-color: darkorange; margin-top: 35%;" >
           <i class="fas fa-users"></i>
-          <a  class="links" title="Gestion des utilisateurs"  [routerLink]="['/','utilisateurs']" > Gestion des tilisateurs</a>
+          <a  class="links" title="Gestion des utilisateurs"  [routerLink]="['/','utilisateurs']" > Gestion des utilisateurs</a>
         </li>
 
 
@@ -29,7 +29,7 @@
 
         <li class="list-group-item list-group-item-dark" style="border: 0px solid rgba(0, 0, 0, 0.125) !important; background-color: darkorange">
           <i class="fas fa-file-invoice-dollar"></i>
-          <a  class="links" title="Demandes des frais personnels" [routerLink]="['/','tableau-de-bord']" > Demandes des frais personnels</a>
+          <a  class="links" title="Demandes des frais personnels" [routerLink]="['/','liste-frais']" > Demandes des frais personnels</a>
         </li>
 
         <li class="list-group-item list-group-item-dark" style="border: 0px solid rgba(0, 0, 0, 0.125) !important; background-color: darkorange">
