--- a/src/app/list-conges/list-conges.component.html
+++ b/src/app/list-conges/list-conges.component.html
@@ -1,100 +1,98 @@
 <div class="card">
-  <p-table #dt [value]="conges" dataKey="id" styleClass="p-datatable-customers" [rowHover]="true"
-           [rows]="10" [showCurrentPageReport]="true" [rowsPerPageOptions]="[5,10,15]" [loading]="loading"
-           [paginator]="true" currentPageReportTemplate="Visualiser de {first} à {last} pour {totalRecords} congés"
-           [filterDelay]="0" [globalFilterFields]="['nom','pernom','matricule','email','creationDate','status']">
-    <ng-template pTemplate="caption" >
-      <div style="display: flex; width: 100%">
-        <div class="p-d-flex p-ai-center p-jc-between" style="width: 60%">
-        <span class="p-input-icon-left" style="width: 100%">
+    <p-table #dt [value]="conges" dataKey="id" styleClass="p-datatable-customers" [rowHover]="true" [rows]="10" [showCurrentPageReport]="true" [rowsPerPageOptions]="[5,10,15]" [loading]="loading" [paginator]="true" currentPageReportTemplate="Visualiser de {first} à {last} pour {totalRecords} congés"
+        [filterDelay]="0" [globalFilterFields]="['nom','pernom','matricule','email','creationDate','status']">
+        <ng-template pTemplate="caption">
+            <div style="display: flex; width: 100%">
+                <div class="p-d-flex p-ai-center p-jc-between" style="width: 60%">
+                    <span class="p-input-icon-left" style="width: 100%">
                     <i class="pi pi-search"></i>
                     <input pInputText class="searchInput, p-inputtext" type="text" style="margin-left: 5%; width: 93%;"(input)="dt.filterGlobal($event.target.value, 'contains')" placeholder="Chercher une demande de congés" />
                 </span>
-        </div>
-        <!--
-        <div style="width: 24%;
+                </div>
+
+                <div *ngIf="!isRh" style="width: 24%;
     margin-left: 21%;">
-          <button pButton pRipple label="Nouvelle demande" icon="pi pi-plus" class="p-button-success p-mr-2" (click)="openNew()"></button>
-        </div>
-        -->
-      </div>
+                    <button pButton pRipple label="Nouvelle demande" icon="pi pi-plus" class="p-button-success p-mr-2" (click)="openNew()"></button>
+                </div>
 
-    </ng-template>
-    <ng-template pTemplate="header">
-      <tr style="font-size: 13px !important;">
+            </div>
 
-        <th pSortableColumn="employe" style="text-align: center; width: 90px;">Employé</th>
+        </ng-template>
+        <ng-template pTemplate="header">
+            <tr style="font-size: 13px !important;">
 
-        <th pSortableColumn="demandeCongeType" style="text-align: center;">Type </th>
-<!--
+                <th *ngIf="isRh" pSortableColumn="employe" style="text-align: center; width: 90px;">Employé</th>
+
+                <th pSortableColumn="demandeCongeType" style="text-align: center;">Type </th>
+                <!--
         <th pSortableColumn="motif">Motif </th>
 -->
-        <th pSortableColumn="dateDeb" style="text-align: center;">Date de début </th>
-        <th pSortableColumn="dateFin"  style="text-align: center;">Date de fin </th>
-        <th pSortableColumn="nbrJrs"  style="text-align: center;">Nombre des jours </th>
-        <th pSortableColumn="remplacant" style="text-align: center; width: 120px">Remplaçant</th>
-        <th pSortableColumn="tacheDele" style="text-align: center; width:150px;">Taches à faire</th>
-        <th pSortableColumn="dateDem" style="text-align: center;">Date de création</th>
-        <th pSortableColumn="status" style="text-align: center;width:90px">Statut</th>
+                <th pSortableColumn="dateDeb" style="text-align: center;">Date de début </th>
+                <th pSortableColumn="dateFin" style="text-align: center;">Date de fin </th>
+                <th pSortableColumn="nbrJrs" style="text-align: center;">Nombre des jours </th>
+                <th pSortableColumn="remplacant" style="text-align: center; width: 120px">Remplaçant</th>
+                <th pSortableColumn="tacheDele" style="text-align: center; width:150px;">Taches à faire</th>
+                <th pSortableColumn="dateDem" style="text-align: center;">Date de création</th>
+                <th pSortableColumn="status" style="text-align: center;width:90px">Statut</th>
 
-        <th style="width: 10rem"></th>
+                <th *ngIf="isRh" style="width: 10rem"></th>
 
-      </tr>
-    </ng-template>
-    <ng-template pTemplate="body" let-conge>
-      <tr class="p-selectable-row" style="font-size: 13px !important;">
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-conge>
+            <tr class="p-selectable-row" style="font-size: 13px !important;">
 
-        <td style="text-align: center;">
-          {{conge.employe}}
-        </td>
+                <td *ngIf="isRh" style="text-align: center;">
+                    {{conge.employe}}
+                </td>
 
-        <td style="text-align: center;">
-          {{conge.demandeCongeType}}
-        </td>
-<!--
+                <td style="text-align: center;">
+                    {{conge.demandeCongeType}}
+                </td>
+                <!--
         <td>
           {{conge.motif}}
         </td>
 -->
-        <td style="text-align: center;">
-          {{conge.dateDeb}}
-        </td>
-        <td style="text-align: center;">
-          {{conge.dateFin}}
-        </td>
-        <td style="text-align: center;">
-          {{conge.nbrJrs}}
-        </td>
-        <td style="text-align: center;">
-          {{conge.remplacant}}
-        </td>
-        <td style="text-align: center;">
-          {{conge.tacheDele}}
-        </td>
-        <td style="text-align: center;">
-          {{conge.dateDem}}
-        </td>
+                <td style="text-align: center;">
+                    {{conge.dateDeb}}
+                </td>
+                <td style="text-align: center;">
+                    {{conge.dateFin}}
+                </td>
+                <td style="text-align: center;">
+                    {{conge.nbrJrs}}
+                </td>
+                <td style="text-align: center;">
+                    {{conge.remplacant}}
+                </td>
+                <td style="text-align: center;">
+                    {{conge.tacheDele}}
+                </td>
+                <td style="text-align: center;">
+                    {{conge.dateDem}}
+                </td>
 
-        <td style="text-align: center;">
-          <span *ngIf="conge.status === 'VALIDATED'" class="customer-badge status-active">Validé</span>
-          <span *ngIf="conge.status === 'REFUSED'" class="customer-badge status-blocked">Refusé</span>
-          <span *ngIf="conge.status === 'IN_PROGRESS'" class="customer-badge status-progress">En cours</span>
-        </td>
+                <td style="text-align: center;">
+                    <span *ngIf="conge.status === 'VALIDATED'" class="customer-badge status-active">Validé</span>
+                    <span *ngIf="conge.status === 'REFUSED'" class="customer-badge status-blocked">Refusé</span>
+                    <span *ngIf="conge.status === 'IN_PROGRESS'" class="customer-badge status-progress">En cours</span>
+                </td>
 
-        <td style="text-align: center;">
-          <div style="display: flex;">
-            <button pButton  [disabled]="conge.status !== 'IN_PROGRESS'" pRipple icon="pi pi-check" class="p-button-rounded p-button-success p-mr-2" style="margin-right: 7px;" (click)="1"></button>
-            <button pButton  [disabled]="conge.status !== 'IN_PROGRESS'" pRipple icon="pi pi-times" class="p-button-rounded p-button-danger" (click)="1"></button>
-          </div>
+                <td *ngIf="isRh" style="text-align: center;">
+                    <div style="display: flex;">
+                        <button pButton [disabled]="conge.status !== 'IN_PROGRESS'" pRipple icon="pi pi-check" class="p-button-rounded p-button-success p-mr-2" style="margin-right: 7px;" (click)="1"></button>
+                        <button pButton [disabled]="conge.status !== 'IN_PROGRESS'" pRipple icon="pi pi-times" class="p-button-rounded p-button-danger" (click)="1"></button>
+                    </div>
 
-        </td>
+                </td>
 
-      </tr>
-    </ng-template>
-    <ng-template pTemplate="emptymessage">
-      <tr>
-        <td colspan="8">Aucun congé trouvé.</td>
-      </tr>
-    </ng-template>
-  </p-table>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="emptymessage">
+            <tr>
+                <td colspan="8">Aucun congé trouvé.</td>
+            </tr>
+        </ng-template>
+    </p-table>
 </div>
