--- a/src/app/liste-frais/liste-frais.component.html
+++ b/src/app/liste-frais/liste-frais.component.html
@@ -1,76 +1,74 @@
 <div class="card">
-  <p-table #dt [value]="demandes" dataKey="id" styleClass="p-datatable-customers" [rowHover]="true"
-           [rows]="10" [showCurrentPageReport]="true" [rowsPerPageOptions]="[5,10,15]" [loading]="loading"
-           [paginator]="true" currentPageReportTemplate="Visualiser de {first} à {last} pour {totalRecords} demandes de frais de missions"
-           [filterDelay]="0" [globalFilterFields]="['employe','montant','dateMession','dateDem','status']">
-    <ng-template pTemplate="caption" >
-      <div style="display: flex; width: 100%">
-        <div class="p-d-flex p-ai-center p-jc-between" style="width: 60%">
-        <span class="p-input-icon-left" style="width: 100%">
+    <p-table #dt [value]="demandes" dataKey="id" styleClass="p-datatable-customers" [rowHover]="true" [rows]="10" [showCurrentPageReport]="true" [rowsPerPageOptions]="[5,10,15]" [loading]="loading" [paginator]="true" currentPageReportTemplate="Visualiser de {first} à {last} pour {totalRecords} demandes de frais de missions"
+        [filterDelay]="0" [globalFilterFields]="['employe','montant','dateMession','dateDem','status']">
+        <ng-template pTemplate="caption">
+            <div style="display: flex; width: 100%">
+                <div class="p-d-flex p-ai-center p-jc-between" style="width: 60%">
+                    <span class="p-input-icon-left" style="width: 100%">
                     <i class="pi pi-search"></i>
                     <input pInputText class="searchInput, p-inputtext" type="text" style="margin-left: 5%; width: 93%;"(input)="dt.filterGlobal($event.target.value, 'contains')" placeholder="Chercher une demande de frais de mission" />
                 </span>
-        </div>
-        <!--
-        <div style="width: 24%;
-    margin-left: 21%;">
-          <button pButton pRipple label="Nouvelle demande" icon="pi pi-plus" class="p-button-success p-mr-2" (click)="openNew()"></button>
-        </div>
-        -->
-      </div>
+                </div>
 
-    </ng-template>
-    <ng-template pTemplate="header">
-      <tr>
+                <div style="width: 24%;
+    margin-left: 21%;" *ngIf="!isRh">
+                    <button pButton pRipple label="Nouvelle demande" icon="pi pi-plus" class="p-button-success p-mr-2" (click)="openNew()"></button>
+                </div>
 
-        <th pSortableColumn="employe" style="text-align: center">Employé</th>
+            </div>
 
-        <th pSortableColumn="montant" style="text-align: center">Montant</th>
-        <th pSortableColumn="dateDem"  style="width: 250px; text-align: center">Date de mission</th>
-        <th pSortableColumn="dateDem"  style="width: 250px; text-align: center">Date de création</th>
-        <th pSortableColumn="status" style="text-align: center">Statut</th>
+        </ng-template>
+        <ng-template pTemplate="header">
+            <tr>
 
-        <th style="width: 10rem"></th>
+                <th *ngIf="isRh" pSortableColumn="employe" style="text-align: center">Employé</th>
 
-      </tr>
-    </ng-template>
-    <ng-template pTemplate="body" let-demande>
-      <tr class="p-selectable-row">
+                <th pSortableColumn="montant" style="text-align: center">Montant</th>
+                <th pSortableColumn="dateDem" style="width: 250px; text-align: center">Date de mission</th>
+                <th pSortableColumn="dateDem" style="width: 250px; text-align: center">Date de création</th>
+                <th pSortableColumn="status" style="text-align: center">Statut</th>
 
-        <td style="text-align: center">
-          {{demande.employe}}
-        </td>
+                <th *ngIf="isRh" style="width: 10rem"></th>
 
-        <td style="text-align: center">
-          {{demande.montant}}
-        </td>
-        <td style="text-align: center">
-          {{demande.dateMession}}
-        </td>
-        <td style="text-align: center">
-          {{demande.dateDem}}
-        </td>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-demande>
+            <tr class="p-selectable-row">
 
-        <td style="text-align: center">
-          <span *ngIf="demande.status === 'VALIDATED'" class="customer-badge status-active">Validé</span>
-          <span *ngIf="demande.status === 'REFUSED'" class="customer-badge status-blocked">Refusé</span>
-          <span *ngIf="demande.status === 'IN_PROGRESS'" class="customer-badge status-progress">En cours</span>
-        </td>
+                <td *ngIf="isRh" style="text-align: center">
+                    {{demande.employe}}
+                </td>
 
-        <td style="text-align: center">
-          <div style="display: flex;">
-            <button pButton  [disabled]="demande.status !== 'IN_PROGRESS'" pRipple icon="pi pi-check" class="p-button-rounded p-button-success p-mr-2" style="margin-right: 7px;" (click)="1"></button>
-            <button pButton  [disabled]="demande.status !== 'IN_PROGRESS'" pRipple icon="pi pi-times" class="p-button-rounded p-button-danger" (click)="1"></button>
-          </div>
+                <td style="text-align: center">
+                    {{demande.montant}}
+                </td>
+                <td style="text-align: center">
+                    {{demande.dateMession}}
+                </td>
+                <td style="text-align: center">
+                    {{demande.dateDem}}
+                </td>
 
-        </td>
+                <td style="text-align: center">
+                    <span *ngIf="demande.status === 'VALIDATED'" class="customer-badge status-active">Validé</span>
+                    <span *ngIf="demande.status === 'REFUSED'" class="customer-badge status-blocked">Refusé</span>
+                    <span *ngIf="demande.status === 'IN_PROGRESS'" class="customer-badge status-progress">En cours</span>
+                </td>
 
-      </tr>
-    </ng-template>
-    <ng-template pTemplate="emptymessage">
-      <tr>
-        <td colspan="8">Aucun demande de frais de mission trouvé.</td>
-      </tr>
-    </ng-template>
-  </p-table>
+                <td *ngIf="isRh" style="text-align: center">
+                    <div style="display: flex;">
+                        <button pButton [disabled]="demande.status !== 'IN_PROGRESS'" pRipple icon="pi pi-check" class="p-button-rounded p-button-success p-mr-2" style="margin-right: 7px;" (click)="1"></button>
+                        <button pButton [disabled]="demande.status !== 'IN_PROGRESS'" pRipple icon="pi pi-times" class="p-button-rounded p-button-danger" (click)="1"></button>
+                    </div>
+
+                </td>
+
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="emptymessage">
+            <tr>
+                <td colspan="8">Aucun demande de frais de mission trouvé.</td>
+            </tr>
+        </ng-template>
+    </p-table>
 </div>
