--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,48 +1,66 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 </head>
+
 <body>
-<div class="nav" style="background-color: darkorange;">
-  <div class="list" >
-    <div>
-      <ul class="list-group list-group-flush" style="background-color: darkorange;">
+    <div class="nav" style="background-color: darkorange;">
+        <div class="list">
+            <div>
+                <ul class="list-group list-group-flush" style="background-color: darkorange;">
 
-        <li  class="list-group-item list-group-item-dark" style="border: 0px solid rgba(0, 0, 0, 0.125) !important; background-color: darkorange; margin-top: 35%;" >
-          <i class="fas fa-users"></i>
-          <a  class="links" title="Gestion des utilisateurs"  [routerLink]="['/','utilisateurs']" > Gestion des utilisateurs</a>
-        </li>
-
-
-        <li class="list-group-item list-group-item-dark" style="border: 0px solid rgba(0, 0, 0, 0.125) !important; background-color: darkorange;">
-          <i class="fas fa-envelope"></i>
-          <a  class="links" title="Demandes de congés" [routerLink]="['/','conges']" > Demandes de congés</a>
-        </li>
-
-        <li class="list-group-item list-group-item-dark" style="border: 0px solid rgba(0, 0, 0, 0.125) !important; background-color: darkorange">
-          <i class="fas fa-hand-holding-usd"></i>
-          <a  class="links" title="Demandes des avances salaires" [routerLink]="['/','avances-salaire']" > Demandes des avances salaires</a>
-        </li>
-
-        <li class="list-group-item list-group-item-dark" style="border: 0px solid rgba(0, 0, 0, 0.125) !important; background-color: darkorange">
-          <i class="fas fa-file-invoice-dollar"></i>
-          <a  class="links" title="Demandes des frais personnels" [routerLink]="['/','liste-frais']" > Demandes des frais personnels</a>
-        </li>
-
-        <li class="list-group-item list-group-item-dark" style="border: 0px solid rgba(0, 0, 0, 0.125) !important; background-color: darkorange">
-          <i class="fas fa-user-cog"></i>
-          <a  class="links" title="Demandes de modifications des informations personnelles" [routerLink]="['/','tableau-de-bord']" > Demandes de modifications des informations personnelles</a>
-        </li>
+                    <li class="list-group-item list-group-item-dark" style="border: 0px solid rgba(0, 0, 0, 0.125) !important; background-color: darkorange; margin-top: 35%;" *ngIf="!isEmploye">
+                        <i class="fas fa-users"></i>
+                        <a class="links" title="Gestion des utilisateurs" [routerLink]="['/','utilisateurs']"> Gestion des utilisateurs</a>
+                    </li>
 
 
+                    <li class="list-group-item list-group-item-dark" style="border: 0px solid rgba(0, 0, 0, 0.125) !important; background-color: darkorange;" *ngIf="isRH">
+                        <i class="fas fa-envelope"></i>
+                        <a class="links" title="Demandes de congés" [routerLink]="['/','conges']"> Demandes de congés</a>
+                    </li>
+                    <li class="list-group-item list-group-item-dark" style="border: 0px solid rgba(0, 0, 0, 0.125) !important; background-color: darkorange;" *ngIf="!isRH">
+                        <i class="fas fa-envelope"></i>
+                        <a class="links" title="Demandes de congés" [routerLink]="['/','conges']"> Mes demandes de congés</a>
+                    </li>
+
+                    <li class="list-group-item list-group-item-dark" style="border: 0px solid rgba(0, 0, 0, 0.125) !important; background-color: darkorange" *ngIf="isRH">
+                        <i class="fas fa-hand-holding-usd"></i>
+                        <a class="links" title="Demandes des avances salaires" [routerLink]="['/','avances-salaire']"> Demandes des avances salaires</a>
+                    </li>
+                    <li class="list-group-item list-group-item-dark" style="border: 0px solid rgba(0, 0, 0, 0.125) !important; background-color: darkorange" *ngIf="!isRH">
+                        <i class="fas fa-hand-holding-usd"></i>
+                        <a class="links" title="Demandes des avances salaires" [routerLink]="['/','avances-salaire']"> Mes demandes des avances salaires</a>
+                    </li>
+
+                    <li class="list-group-item list-group-item-dark" style="border: 0px solid rgba(0, 0, 0, 0.125) !important; background-color: darkorange" *ngIf="isRH">
+                        <i class="fas fa-file-invoice-dollar"></i>
+                        <a class="links" title="Demandes des frais personnels" [routerLink]="['/','liste-frais']"> Demandes des frais personnels</a>
+                    </li>
+                    <li class="list-group-item list-group-item-dark" style="border: 0px solid rgba(0, 0, 0, 0.125) !important; background-color: darkorange" *ngIf="!isRH">
+                        <i class="fas fa-file-invoice-dollar"></i>
+                        <a class="links" title="Demandes des frais personnels" [routerLink]="['/','liste-frais']"> Mes demandes des frais personnels</a>
+                    </li>
+
+                    <li class="list-group-item list-group-item-dark" style="border: 0px solid rgba(0, 0, 0, 0.125) !important; background-color: darkorange" *ngIf="isRH">
+                        <i class="fas fa-user-cog"></i>
+                        <a class="links" title="Demandes de modifications des informations personnelles" [routerLink]="['/','tableau-de-bord']"> Demandes de modifications des informations personnelles</a>
+                    </li>
+
+                    <li class="list-group-item list-group-item-dark" style="border: 0px solid rgba(0, 0, 0, 0.125) !important; background-color: darkorange" *ngIf="! isRH">
+                        <i class="fas fa-user-cog"></i>
+                        <a class="links" title="Demandes de modifications des informations personnelles" [routerLink]="['/','tableau-de-bord']"> Mes demandes de modifications des informations personnelles</a>
+                    </li>
 
 
-      </ul>
+                </ul>
+            </div>
+        </div>
     </div>
-  </div>
-</div>
 </body>
+
 </html>
